# libpsoarchive

./: COPYING  Makefile.am  configure.ac
doc/: Makefile.am  gsl.txt  prs.txt
include/: AFS.h  GSL.h  Makefile.am  PRS.h  PRSD.h
src/: AFS-read.c  AFS-write.c  GSL-common.h  GSL-read.c  GSL-write.c  Makefile.am  PRS-comp.c  PRS-decomp.c  PRSD-common.h  PRSD-comp.c  PRSD-crypt.c  PRSD-decomp.c  error.c
